--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,25 +21,37 @@
 <div class="container">
     <div class="blog-container">
         <!--在这输出博客-->
-        <div class="card" th:each="blog:${blogs}">
+        <div th:each="blog:${blogs}">
             <!--start-->
-            <div class="card-body">
-                <div class="card-header bg-light">
-                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person" fill="currentColor"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd"
-                              d="M13 14s1 0 1-1-1-4-6-4-6 3-6 4 1 1 1 1h10zm-9.995-.944v-.002.002zM3.022 13h9.956a.274.274 0 0 0 .014-.002l.008-.002c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664a1.05 1.05 0 0 0 .022.004zm9.974.056v-.002.002zM8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                    </svg>
-                    <span th:text="${blog.authorName}"></span>
-                    &nbsp;&nbsp;&nbsp;&nbsp;
-                    <span th:text="${blog.lastPushDate}"></span>
-                    &nbsp;&nbsp;&nbsp;&nbsp;
-                    <span class="text-primary" th:text="${blog.topicName}"></span>
+            <div class="card">
+                <div class="card-body">
+                    <div class="card-header bg-light">
+                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person" fill="currentColor"
+                             xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd"
+                                  d="M13 14s1 0 1-1-1-4-6-4-6 3-6 4 1 1 1 1h10zm-9.995-.944v-.002.002zM3.022 13h9.956a.274.274 0 0 0 .014-.002l.008-.002c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664a1.05 1.05 0 0 0 .022.004zm9.974.056v-.002.002zM8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                        </svg>
+                        <span th:text="${blog.authorName}"></span>
+                        &nbsp;&nbsp;&nbsp;&nbsp;
+                        <span th:text="${blog.lastPushDate}"></span>
+                        &nbsp;&nbsp;&nbsp;&nbsp;
+                        <span class="text-primary" th:text="${blog.topicName}"></span>
+                        &nbsp;&nbsp;&nbsp;&nbsp;
+                        <span th:text="${blog.clicks}"></span>阅读
+                        &nbsp;&nbsp;&nbsp;&nbsp;
+                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-suit-heart" fill="currentColor"
+                             xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd"
+                                  d="M8 6.236l.894-1.789c.222-.443.607-1.08 1.152-1.595C10.582 2.345 11.224 2 12 2c1.676 0 3 1.326 3 2.92 0 1.211-.554 2.066-1.868 3.37-.337.334-.721.695-1.146 1.093C10.878 10.423 9.5 11.717 8 13.447c-1.5-1.73-2.878-3.024-3.986-4.064-.425-.398-.81-.76-1.146-1.093C1.554 6.986 1 6.131 1 4.92 1 3.326 2.324 2 4 2c.776 0 1.418.345 1.954.852.545.515.93 1.152 1.152 1.595L8 6.236zm.392 8.292a.513.513 0 0 1-.784 0c-1.601-1.902-3.05-3.262-4.243-4.381C1.3 8.208 0 6.989 0 4.92 0 2.755 1.79 1 4 1c1.6 0 2.719 1.05 3.404 2.008.26.365.458.716.596.992a7.55 7.55 0 0 1 .596-.992C9.281 2.049 10.4 1 12 1c2.21 0 4 1.755 4 3.92 0 2.069-1.3 3.288-3.365 5.227-1.193 1.12-2.642 2.48-4.243 4.38z"/>
+                        </svg>
+                        <span th:text="${blog.likes}"></span>
+                        <span th:if="${blog.isCurrentUserLikes}">+1</span>
+                    </div>
+                    <div class="card-title">
+                        <a class="text-decoration-none" th:href="@{'/b/'+${blog.id}}" th:text="${blog.title}"></a>
+                    </div>
+                    <div class="card-text" th:utext="${blog.contentView}"></div>
                 </div>
-                <div class="card-title">
-                    <a class="text-decoration-none" th:href="@{'/b/'+${blog.id}}" th:text="${blog.title}"></a>
-                </div>
-                <div class="card-text" th:utext="${blog.contentView}"></div>
             </div>
             <!--end-->
         </div>
