--- a/src/main/resources/templates/register_page.html
+++ b/src/main/resources/templates/register_page.html
@@ -51,6 +51,6 @@
     </form>
     <div id="userInfo" th:include="navigate::info"></div>
 </div>
-<script th:src="@{js/register_page.js}"></script>
+<script th:src="@{../js/register_page.js}"></script>
 </body>
 </html>
